# resumaze

./: .gitignore  LICENSE  README.md  go.mod  go.sum  main.go
backend/: .env.example  .gitignore  docker-compose.yaml  go.mod  go.sum  token.json
backend/cmd/server/: main.go
backend/internal/ai/: gemini.go  groq.go  parser.go
backend/internal/auth/: jwt.go  middleware.go
backend/internal/calendar/: calendar.go
backend/internal/db/: crud.go  db.go  users.go
backend/internal/drive/: delete.go  drive_auth.go  drive_shared.go  (+1 more)
cmd/server/: main.go
frontend/: .gitignore  api.py  app.py  config.py  package-lock.json  package.json  pyproject.toml  requirements.txt  state.py
frontend/src/: middleware.ts  proxy.ts
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/admin/: page.tsx
frontend/src/app/analytics/: page.tsx
frontend/src/app/candidates/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/pipeline/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/app/upload/: page.tsx
frontend/src/components/: CandidateCard.tsx  CandidateDrawer.tsx  CandidateTable.tsx  ClientLayout.tsx  ConfirmDialog.tsx  KanbanBoard.tsx  KanbanColumn.tsx  Sidebar.tsx  StatsCard.tsx  UploadZone.tsx
frontend/src/components/candidate/: InterviewsPanel.tsx  NotesPanel.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/lib/: api.ts  utils.ts
frontend/views/: analytics.py  board.py  edit.py  settings.py  upload.py
internal/db/: connect.go  crud.go  db.go
internal/drive/: drive.go  upload.go
internal/handlers/: stage_handlers.go
(+10 files in other folders)
