[project]
name = "resumaze-frontend"
version = "0.1.0"
description = "Streamlit frontend for Resumaze"
requires-python = ">=3.12"
dependencies = [
    "streamlit",
    "requests",
    "pandas",
    "streamlit-sortables",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ['/frontend']
